[gd_scene load_steps=4 format=3 uid="uid://cw1mk6wxobunk"]

[ext_resource type="Script" path="res://Ninja/Scripts/NinjaUI.gd" id="1_v845j"]
[ext_resource type="Texture2D" uid="uid://gna2oprxk4qw" path="res://Main/Assets/Misc/full.png" id="4_1hbpo"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pp2tl"]
properties/0/path = NodePath(".:scale")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="NinjaUI" type="Control" node_paths=PackedStringArray("Heart1", "Heart2", "Heart3")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_v845j")
Heart1 = NodePath("HealthIcons/Heart1")
Heart2 = NodePath("HealthIcons/Heart2")
Heart3 = NodePath("HealthIcons/Heart3")

[node name="HealthIcons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -19.0
offset_top = -45.0
offset_right = 20.0
offset_bottom = -34.0
theme_override_constants/separation = 3

[node name="Heart1" type="TextureRect" parent="HealthIcons"]
layout_mode = 2
texture = ExtResource("4_1hbpo")

[node name="Heart2" type="TextureRect" parent="HealthIcons"]
layout_mode = 2
texture = ExtResource("4_1hbpo")

[node name="Heart3" type="TextureRect" parent="HealthIcons"]
layout_mode = 2
texture = ExtResource("4_1hbpo")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_pp2tl")
